change stats URL and document in OpenAPI
